style.css
:root {
  --primaryColor: hsla(203, 60%, 57%, 0.8);
  --secondaryColor: hsla(53, 90%, 75%, 0.8);
  --tertiaryColor: hsla(353, 90%, 75%, 0.8);

  background: url(https://images.unsplash.com/photo-1546965860-f981527a0422?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2002&q=80)
    no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body {
  max-width: 30rem;
  font-family: "Sen", sans-serif;
  margin: 0 auto;
  background-color: var(--primaryColor);
  border-radius: 2%;
  padding: 1em;
}

ul {
  text-align: left;
  padding: 0;
}

h1 {
  margin-top: 1rem;
  font-size: 3.5rem;
  text-align: center;
}

.todo__text--done {
  text-decoration: line-through;
}

li {
  list-style-type: none;
  border: 5px dotted transparent;
  padding: 2rem 0;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: 1;
}

li > input {
  grid-column: 1/2;
}

li > input,
li > button {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

li:hover {
  border: 5px dotted pink;
}

li > label {
  font-size: 2rem;
  word-wrap: break-word;
  grid-column: 2/12;
}

li > button {
  height: 2em;
  grid-column: 12/13;
  position: relative;
  background-color: var(--secondaryColor);
  font-size: 1.5rem;
  border: 2px solid black;
  border-radius: 10px;
  padding: 0.5rem;
}

li > button:hover {
  border: 2px solid grey;
  background-color: var(--tertiaryColor);
}

form {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 1;
  height: 3rem;
}

form > input {
  grid-column: 1 / 5;
  padding: 0 1rem;
  border: none;
  background-color: aliceblue;
  font-size: 1.75em;
}

form > button {
  grid-column: 5 / 6;
  border: none;
  background-color: aliceblue;
}

.form-list > p {
  color: hsl(0, 80%, 40%);
  font-size: 2rem;
  text-align: center;
}

.hide {
  display: none;
}

@media screen and (min-width: 480px) {
  body {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

